// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Button as a link 1`] = `
Array [
  <div
    className="guide-example"
  >
    <a
      className="sc-gzVnrw kfSUet"
      disabled={false}
      href="https://google.com"
      onClick={[Function]}
      target="_blank"
      type="button"
    >
      link button
    </a>
    <code
      className="guide-example-label"
    >
      href
    </code>
  </div>,
  <pre>
    <code>
      Button (as a link) sample code here (also needs styling to match calcite-web?)
    </code>
  </pre>,
]
`;

exports[`Storyshots Button with text 1`] = `
Array [
  <div
    className="guide-example"
  >
    <button
      className="sc-bdVaJa eITdrl"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      Hello Button
    </button>
    <code
      className="guide-example-label"
    >
      default
    </code>
  </div>,
  <div
    className="guide-example"
  >
    <button
      className="sc-htpNat cHmDcD"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      Hello Button
    </button>
    <code
      className="guide-example-label"
    >
      red
    </code>
  </div>,
  <div
    className="guide-example"
  >
    <button
      className="sc-ifAKCX kVnZFP"
      disabled={true}
      onClick={[Function]}
      type="button"
    >
      Hello Button
    </button>
    <code
      className="guide-example-label"
    >
      disabled
    </code>
  </div>,
  <pre>
    <code>
      Button sample code here (also needs styling to match calcite-web?)
    </code>
  </pre>,
]
`;

exports[`Storyshots Label default 1`] = `
Array [
  <div
    className="guide-example"
  >
    <mark
      className="sc-htoDjs esDZMp"
    >
      label
    </mark>
    <code
      className="guide-example-label"
    >
      default
    </code>
  </div>,
  <div
    className="guide-example"
  >
    <mark
      className="sc-dnqmqq lbwdcO"
    >
      label
    </mark>
    <code
      className="guide-example-label"
    >
      red
    </code>
  </div>,
  <pre>
    <code>
      Label sample code here (also needs styling to match calcite-web?)
    </code>
  </pre>,
]
`;
